  * Email change: Andres Salomon -> dilinger@debian.org
  * Refreshed copyright
  * Reviewed dependencies
  * Installed gdb scripts to examples for dev package


  [ Damyan Ivanov ]
  * add avoid-db-linkage.patch: avoids needless linking with libdb, which
    entangles us in libdb transitions. Closes: #621415
  * rules: pass --parallel to dh command allowing parallel builds

 -- Nicholas Bamber <nicholas@periapt.co.uk>  Tue, 22 Mar 2011 14:19:58 +0000

libapache2-mod-perl2 (2.0.4-7) unstable; urgency=low

  * change source Section to 'httpd'
  * add a patch from Niko Tyni avoiding two warnings about use of uninitialized
    values, which break tests under Perl 5.12. (Closes: #578481)
  * add a patch fixinf spelling errors in POD and other documentation
  * add a patch fixinng POD errors
  * add a patch fixing bad manpage whatis name
  * Standards-Version: 3.8.4
    + support 'nockeck' in DEB_BUILD_OPTIONS as per Policy 3.8.1
  * describe all patches

 -- Damyan Ivanov <dmn@debian.org>  Wed, 21 Apr 2010 12:48:11 +0300

libapache2-mod-perl2 (2.0.4-6) unstable; urgency=high

  [ gregor herrmann ]
  * debian/control: Changed: (build-)depend on perl instead of perl-
    modules.

  [ Dario Minnucci ]
  * docs/index_top.html: Issued patch 099-fix-url-on-index_top.patch 
    to fix link URL. (Closes: #507606)

  [ Damyan Ivanov ]
  * add 100-svn-XSS-Status.patch; fixes XSS in Apache2::Status (CVE-2009-0796)
    Patch taken from r760926 of upstream SVN.
    Closes: #567635
  * .docs: drop debian/NEWS.Debian and Changes
  * -doc: depend on ${misc:Depends}
  * drop debian/NEWS (documents changes before oldstable)

 -- Damyan Ivanov <dmn@debian.org>  Sat, 30 Jan 2010 18:00:43 +0200

libapache2-mod-perl2 (2.0.4-5) unstable; urgency=low

  [ gregor herrmann ]
  * debian/control: Changed: Switched Vcs-Browser field to ViewSVN
    (source stanza).

  [ Damyan Ivanov ]
  * add 010-doc-no-more-send_http_header.patch removing a forgotten