@@ -41,6 +41,8 @@ libapache2-mod-perl2 (2.0.5-1) UNRELEASED; urgency=low
   * add avoid-db-linkage.patch: avoids needless linking with libdb, which
     entangles us in libdb transitions. Closes: #621415
   * rules: pass --parallel to dh command allowing parallel builds
+  * rules: pass CFLAGS to upstream make as MODPERL_OPTIMIZE, allowing
+    dpkg-buildpackage-induced CFLAGS to end up on the compiler command line
 
  -- Nicholas Bamber <nicholas@periapt.co.uk>  Tue, 22 Mar 2011 14:19:58 +0000
 
